# zzxrm27-assess

./: .gitignore  CMakeLists.txt  CMakeLists.txt.backup  README.md  readme.md  test_yaml  test_yaml.cpp
calibration/: calibrate_handeye_gimbal.cpp  capture_gimbal.cpp  generate_pattern.cpp  simple_capture.cpp  usb_capture.cpp
configs/: ascento.yaml  calibration.yaml  camera.yaml  demo.yaml  example.yaml  galaxy_standard.yaml  mvs.yaml  sentry.yaml  standard3.yaml  standard4.yaml  uav.yaml
io/: CMakeLists.txt  camera.cpp  cboard.cpp  cboard.hpp  socketcan.hpp
io/galaxy/: galaxy.cpp  galaxy.hpp
io/galaxy/include/: DxImageProc.h  GXDef.h  GXErrorList.h  GxIAPI.h  GxIAPILegacy.h  GxPixelFormat.h
io/galaxy/lib/x86_64/: GxGVTL.cti  GxU3VTL.cti
io/gimbal/: gimbal.cpp  gimbal.hpp
io/hikrobot/: hikrobot.cpp  hikrobot.hpp
src/: standard.cpp
tasks/auto_aim/: CMakeLists.txt  shooter.cpp  shooter.hpp  target.cpp  target.hpp
tasks/auto_aim/planner/: planner.cpp  planner.hpp
tasks/auto_buff/: CMakeLists.txt
tools/: CMakeLists.txt  thread_safe_queue.hpp
